--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/core": "^0.8.0",
+    "@emotion/core": "^10.3.1",
+    "@emotion/styled": "^10.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-brands-svg-icons": "^6.0.0",
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
@@ -21,6 +24,7 @@
     "bson": "^4.6.1",
     "classnames": "^2.3.1",
     "cookie": "^0.4.1",
+    "emotion-theming": "^10.3.0",
     "font-awesome": "^4.6.0",
     "ionicons": "^4.6.3",
     "jquery": "^3.6.0",
