--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-brands-svg-icons": "^6.0.0",
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "@mui/material": "^5.9.0",
     "@popperjs/core": "^2.11.2",
     "@sendgrid/mail": "^7.6.0",
     "axios": "^0.21.4",
@@ -33,6 +36,7 @@
     "node-scss": "^7.0.3",
     "popper.js": "^1.16.1",
     "react": "17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "17.0.2",
     "react-google-invisible-recaptcha": "^1.0.0-rc.2",
